# zeus

./: .gitignore  .gitmodules  .ncurc.json  .prettierignore  .prettierrc  .typos.toml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.config.ts  cliff.toml  eslint.config.js  index.js  mvp.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.js  rollup.dts.config.js  rustfmt.toml  skills-lock.json  test-compiler.mjs  tsconfig.build.json  tsconfig.json  turbo.json  vitest.config.ts  vitest.unit.config.ts
.changeset/: config.json  curly-weeks-tap.md  lazy-props-dance.md  release.md  smart-bundlers-serve.md
.cursor/rules/: README.md  docs.mdc  git.mdc  naming.mdc  performance.mdc  project.mdc  test-driven-development.md  testing.mdc
.github/: dependabot.yml  labels.yml  project_template.yml  pull_request_template.md  pull_request_template_cn.md  settings.yml
.github/DISCUSSION_TEMPLATE/: announcements.yml  config.yml  events.yml  general.yml  help-wanted.yml  ideas.yml  polls.yml  q-and-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  question.md
.github/workflows/: autofix.yml  ci.yml  close-cant-reproduce-issues.yml  component-host-bench.yml  component-host-rc.yml  devtools-release.yml  docs.yml  lock-closed-issues.yml  release-canary.yml  release.yml  size-data.yml  size-report.yml  test.yml
addons/babel-preset-zeus/: package.json  rolldown.config.ts  tsconfig.json
addons/build-tools/: package.json  rolldown.config.ts  tsconfig.json
addons/bundle-plugin/: package.json  rolldown.config.ts  tsconfig.json
addons/bundler-plugin/: index.js
addons/component-analyzer/: index.js
addons/output-react-wrapper/: index.js  package.json
addons/output-wc/: index.js  package.json
addons/rollup-plugin-zeus/: package.json  rolldown.config.ts  tsconfig.json
addons/router/: index.js  package.json  rolldown.config.ts  rollup.config.ts  tsconfig.build.json  tsconfig.json
addons/store/: index.js  package.json  rolldown.config.ts  tsconfig.build.json  tsconfig.json
addons/vite-plugin/: package.json
addons/vite-plugin-zeus/: package.json  rolldown.config.ts
addons/web-components/: package.json
benchmarks/component-host/: package.json  tsconfig.json  vite.config.ts
compiler/browser/: package.json
compiler/core/: build.ts  tsconfig.json
core/: global.d.ts
core/compiler/: package.json
core/runtime-dom/: package.json
core/shared/: README.md  package.json
core/signal/: package.json
core/zeus/: jsx-dev-runtime.d.ts  package.json
crates/compiler-common/: Cargo.toml
crates/compiler-common/src/: config.rs  error.rs  lib.rs  types.rs  utils.rs
crates/compiler-core/: Cargo.toml
crates/compiler-core/src/: codegen.rs  diagnostics.rs  lib.rs  parser.rs  semantic.rs  traverse.rs
crates/compiler-core/src/jsx/: component.rs  condition.rs  config.rs  constants.rs  fragment.rs  ir.rs  mod.rs  postprocess.rs  preprocess.rs  state.rs  transform.rs  utils.rs
crates/compiler-core/src/traverse/: control_flow.rs  mod.rs  state.rs  transform.rs  whitespace.rs
crates/compiler-dom/: Cargo.toml
crates/compiler-dom/src/: ast_test.rs  ast_transform.rs  babel_codegen.rs  codegen.rs  compiler_test.rs  control_flow.rs  dom_transforms.rs  event_handlers.rs  jsx.rs  lib.rs  optimizations.rs  template_analyzer.rs  template_ir.rs  traverse_transform.rs
crates/compiler-dom/src/codegen/: context.rs  legacy.rs  mod.rs  template.rs
crates/compiler-dom/src/jsx/: attributes.rs  children.rs  codegen.rs  compiler.rs  element.rs  error.rs  events.rs  hydration.rs  mod.rs  state.rs  template.rs
crates/compiler-dom/tests/: compiler_test.rs  conditional_test.rs
crates/compiler-ssr/: Cargo.toml
crates/compiler-ssr/src/: data_fetching.rs  hydration.rs  lib.rs  renderer.rs  streaming.rs
crates/compiler-universal/: Cargo.toml
crates/compiler-universal/src/: bundler.rs  lib.rs  optimizer.rs  platforms.rs  plugins.rs
crates/compiler-web-component/: Cargo.toml
crates/compiler-web-component/src/: lib.rs  macros.rs  options.rs
crates/runtime-core/: Cargo.toml
crates/zeus_compiler/: Cargo.toml
crates/zeusjs_binding/: Cargo.toml  build.rs
crates/zeusjs_binding/examples/: test_compile.rs
crates/zeusjs_binding/src/: lib.rs
create/zeus-ui/: package.json
docs/: README.md  api-stability.md  babel.md  compiler-dom-design.md  compiler-error-system.md  compiler-fix-plan.md  compiler-ir-first-architecture-plan.md  compiler-traverse-design.md  compiler.md  contributing.md  design.md  future-architecture-roadmap.md  implementation-summary.md  index.md  issues.md  marker-function-analysis.md  mvp-1-5-runtime-dom-compiler-plan.md  mvp-roadmap.md  mvp-todo.md  oxc-sourcemap-design.md  package.json  plan.md  project.md  release-process.md  roadmap.md  signal.md  test-structure.md  todo-jsx-compiler-babel-ts.md  todo.md  zeus-jsx-compiler-rust-oxc-design.md
docs/.vitepress/: config.ts
docs/advanced/: compiler.md  performance.md  reactivity.md  runtime.md
docs/analysis/: babel-vs-oxc-jsx-compiler-comparison.md  compiler-impl-strategy-analysis.md  dom-expressions-syntax-compilation-guide.md  solidjs-compiler-analysis-dom-expressions.md  solidjs-compiler-analysis.md  solidjs-jsx-compiler-comparison.md
docs/api/: compiler.md  downstream-contract.md  packages.md  runtime-dom.md  signal.md  stability.md  vite-plugin.md  zeus.md
docs/architecture/: vite-plugin-design.md  zeus-architecture.md  zeus-compiler-design.md  zeus-compiler-oxc1230-design.md  zeus-router-design.md  (+2 more)
examples/: README.md
jsx-runtime/: index.d.ts  index.js
playground/: demo.tsx
scripts/: README.md  aliases.js  aliases.ts  build-and-link.ts  build-hydration-matrix-report.mjs  build-packages.ts  build.js  build.ts  check-examples.ts  check-package-exports.ts  dev.js  generate-benchmark-report.js  inline-enums.ts  new-stage.ts  release-precheck.ts  release.config.ts  rolldown.config.ts  rolldown.dts.config.ts  rollup.dts.config.ts  size-report.ts  utils.js  utils.ts  verify-treeshaking.js
(+702 files in other folders)
