[workspace]
members = ["./crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/baicie/zeus"

[workspace.lints.clippy]
# Guidelines
# - We should only disable rules globally if they are either false positives, chaotic, or does not make sense.
# - Group are enabled with priority -1, so we could easily override some specific rules.
#   - https://doc.rust-lang.org/stable/cargo/reference/manifest.html#the-lints-section

# --- restriction https://doc.rust-lang.org/clippy/usage.html#clippyrestriction
allow_attributes = "deny"
dbg_macro = "deny"
print_stdout = "deny"

# I like the explicitness of this rule as it removes confusion around `clone`.
# This increases readability, avoids `clone` mindlessly and heap allocating on accident.
clone_on_ref_ptr = "deny"
empty_drop = "deny"
exit = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
unnecessary_safety_comment = "deny"

# --- pedantic #https://doc.rust-lang.org/clippy/usage.html#clippypedantic
# To write the best rust code, pedantic group is enabled by default.
pedantic = { level = "deny", priority = -1 }
case_sensitive_file_extension_comparisons = "allow"

# Wizards, naming is too hard.
module_inception = "allow"
module_name_repetitions = "allow"
similar_names = "allow"

# Forwarding `Result` is a common pattern, this rule is too pedantic.
missing_errors_doc = "allow"

# #[must_use] is creating too much noise for this codebase, it does not add much value except nagging
# the programmer to add a #[must_use] after clippy has been run.
# Having #[must_use] everywhere also hinders readability.
must_use_candidate = "allow"

doc_markdown = "allow"
missing_const_for_fn = "allow"
needless_for_each = "allow"
new_without_default = "allow"
# TODO: should review this rule.
missing_panics_doc = "allow"

# Order doesn't really matter https://rust-lang.github.io/rust-clippy/master/index.html#/inconsistent_struct_constructor
inconsistent_struct_constructor = "allow"

# Single match is equally readable as if/else. https://rust-lang.github.io/rust-clippy/master/index.html#/single_match
single_match = "allow"
single_match_else = "allow"

# Though the following are nursery rules, they’re still useful.
debug_assert_with_mut_call = "warn"
iter_on_single_items = "warn"
needless_pass_by_ref_mut = "warn"
redundant_clone = "warn"
redundant_pub_crate = "warn"
significant_drop_in_scrutinee = "warn"
unused_peekable = "warn"

# Rewriting `unwrap_or` to `map_or` requires to annotate type explicitly which is cumbersome
map_unwrap_or = "allow"

collapsible_if = "allow"

[workspace.dependencies]
# napi
napi = { version = "3.8.2", features = ["async", "anyhow", "tracing"] }
napi-build = { version = "2.3.1" }
napi-derive = { version = "3.5.1", default-features = false, features = [
  "type-def",
  "tracing",
] }

# oxc crates with the same version
oxc = { version = "0.107.0", features = [
  "ast_visit",
  "transformer",
  "minifier",
  "mangler",
  "semantic",
  "codegen",
  "serialize",
  "isolated_declarations",
  "regular_expression",
  "cfg",
] }
oxc_allocator = { version = "0.107.0", features = ["pool"] }
oxc_ecmascript = { version = "0.107.0" }
oxc_semantic = { version = "0.107.0" }
oxc_minify_napi = { version = "0.107.0" }
oxc_parser_napi = { version = "0.107.0" }
oxc_span = { version = "0.107.0" }
oxc_transform_napi = { version = "0.107.0" }
oxc_traverse = { version = "0.107.0" }
oxc_ast = { version = "0.107.0" }
oxc_parser = { version = "0.107.0" }
oxc_codegen = { version = "0.107.0" }
oxc_diagnostics = { version = "0.107.0" }

[profile.dev]
# Minimal debug info to speed up local and CI builds.
debug = "line-tables-only"

[profile.test]
# Minimal debug info to speed up local and CI builds.
debug = "line-tables-only"

[profile.release]
codegen-units = 1
debug = false     # Set to `true` for debug information
lto = "fat"
opt-level = 3
strip = "symbols" # Set to `false` for debug information

[profile.release-debug]
debug = true
inherits = "release"

[profile.profile]
debug = "line-tables-only"
strip = false
lto = "thin"
inherits = "release"

[profile.release-wasi]
inherits = "release"
opt-level = "s"
# napi-rs generates *-debug.*.wasm files with these information
# it will strip these information for non-debug files
debug = "full"
strip = "none"
