[package]
name = "zeus-compiler-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
oxc_allocator = { workspace = true }
oxc_span = { workspace = true }
oxc_traverse = { workspace = true }

[dev-dependencies]
oxc = { workspace = true }
