[package]
name = "zeus-compiler-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/baicie/zeus"

[dependencies]
# oxc dependencies
oxc = { workspace = true }
oxc_allocator = { workspace = true }
oxc_ecmascript = { workspace = true }
oxc_traverse = { workspace = true }

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
