[package]
name = "zeus-compiler-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/baicie/zeus"

[dependencies]
# Zeus common types
zeus-compiler-common = { path = "../compiler-common" }

# oxc dependencies
oxc = { workspace = true }
oxc_allocator = { workspace = true }
