[package]
name = "zeus-compiler-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
zeus-compiler-common = { path = "../compiler-common" }
oxc_allocator = { workspace = true }
oxc_span = { workspace = true }
oxc_traverse = { workspace = true }
oxc = { workspace = true }
oxc_parser = { workspace = true }
oxc_codegen = { workspace = true }
oxc_ast = { workspace = true }
oxc_semantic = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_syntax = { workspace = true }
