[package]
name = "zeus-compiler-dom"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
zeus-compiler-common = { path = "../compiler-common" }
zeus-compiler-core = { path = "../compiler-core" }
oxc_allocator = { workspace = true }
oxc_span = { workspace = true }
oxc_traverse = { workspace = true }
oxc = { workspace = true }
oxc_ast = { workspace = true }
