[package]
name = "zeus-compiler-web-component"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/baicie/zeus"

[dependencies]
# Zeus compiler core
zeus-compiler-core = { path = "../compiler-core" }
zeus-compiler-common = { path = "../compiler-common" }

# oxc dependencies
oxc = { workspace = true }
oxc_allocator = { workspace = true }
oxc_span = { workspace = true }
oxc_traverse = { workspace = true }

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
