[workspace]
members = [
  "crates/compiler-core",
  "crates/compiler-dom",
  "crates/compiler-ssr",
  "crates/compiler-universal",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/baicie/zeus"

[workspace.dependencies]
# oxc dependencies
oxc = "0.35.0"
oxc_allocator = "0.35.0"
oxc_ast = { version = "0.35.0", features = ["serialize"] }
oxc_codegen = "0.35.0"
oxc_diagnostics = "0.35.0"
oxc_ecmascript = "0.35.0"
oxc_hir = "0.35.0"
oxc_parser = "0.35.0"
oxc_semantic = "0.35.0"
oxc_span = "0.35.0"
oxc_syntax = "0.35.0"
oxc_transformer = "0.35.0"
oxc_traverse = "0.35.0"

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
