[package]
name = "zeusjs_binding"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
zeus-compiler-core = { path = "../compiler-core" }
zeus-compiler-dom = { path = "../compiler-dom" }
zeus-compiler-web-component = { path = "../compiler-web-component" }
oxc = { workspace = true }
oxc_diagnostics = "0.107.0"
oxc_span = "0.107.0"
oxc_parser = "0.107.0"

[build-dependencies]
napi-build = { workspace = true }
