[package]
name = "zeusjs-binding"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
zeus-compiler-common = { path = "../compiler-common" }
zeus-compiler-core = { path = "../compiler-core" }
zeus-compiler-dom = { path = "../compiler-dom" }
zeus-compiler-ssr = { path = "../compiler-ssr" }
zeus-compiler-web-component = { path = "../compiler-web-component" }
napi = { workspace = true, features = ["async", "anyhow"] }
napi-derive = { workspace = true }
oxc_allocator = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[build-dependencies]
napi-build = { workspace = true }
